--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 	line-height: 1.5;
 	font-weight: 400;
 	color: rgba(255, 255, 255, 0.87);
-	background-color: #242424;
+	background-image: linear-gradient(to right, #dbe6f6, #c5796d);
 }
 body {
 	margin: 0;
